--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@react-three/fiber": "^9.3.0",
     "@tailwindcss/vite": "^4.1.14",
     "gsap": "^3.13.0",
+    "i18next": "^25.6.2",
+    "i18next-http-backend": "^3.0.2",
     "lenis": "^1.3.11",
     "maath": "^0.10.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.2.4",
     "react-responsive": "^10.0.1",
     "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.14",
